V2.1.0 release - new functionality, bug fixes, documentation
* increased bytes allowed for readline

   There are some situations, like working on localhost, where the
   browser will send a lot of bytes on a single line

* better logging

   adjust logging for readline failure

* documentation on release process

* complain if user lacks config, but keep going

* Fix bug: If user lacks a configuration for extra mime mappings, it's ok.

* adjust configuration error complaint to be milder

* Adjust behavior when a list property is an empty string

   Instead of reading an empty string as a list of one item,
   we'll read it as an empty list.

* Corrected behavior of list property when default is empty string

   If the minum.config file has a value that is meant to be interpreted
   as a list, we have to properly split that value in our Constants.java
   class.  But what happens if the default value is an empty string?
   This code accounts for it properly.

* Adding getting started docs

* Add the ability to set the maximum number of elements we store in our
file LRU cache.

* Extra documentation.